css/1-colors.css
/* ... */
.prm-peer-reviewed {
    color: #8359d4; }

.prm-open-access {
    color: #f68212; }

.prm-personalization, prm-search-result-list prm-personalize-results-button .md-button md-switch.md-checked .md-label, prm-search-result-list prm-personalize-results-button .md-button md-switch.md-checked ._md-label, prm-search-result-list prm-personalize-results-button .md-button md-switch._md-checked .md-label, prm-search-result-list prm-personalize-results-button .md-button md-switch._md-checked ._md-label, .sidebar .personalization-section .section-title-header,
.sidebar .personalization-section .sidebar-list,
.sidebar .personalization-section md-checkbox {
    color: #7d1538; }
.prm-personalization-bg, prm-search-result-list prm-personalize-results-button .md-button md-switch.md-checked .md-bar, prm-search-result-list prm-personalize-results-button .md-button md-switch.md-checked ._md-bar, prm-search-result-list prm-personalize-results-button .md-button md-switch._md-checked .md-bar, prm-search-result-list prm-personalize-results-button .md-button md-switch._md-checked ._md-bar, prm-search-result-list prm-personalize-results-button .md-button md-switch.md-checked .md-thumb, prm-search-result-list prm-personalize-results-button .md-button md-switch.md-checked ._md-thumb, prm-search-result-list prm-personalize-results-button .md-button md-switch._md-checked .md-thumb, prm-search-result-list prm-personalize-results-button .md-button md-switch._md-checked ._md-thumb, .sidebar .personalization-section md-checkbox.md-checked .md-icon, .sidebar .personalization-section .sidebar-list li:before, .sidebar .personalization-section ul li:before {
    background-color: #7d1538; }

/* primary color hook end*/

prm-no-search-result > md-card {
    display:none;
}

